@@ -57,7 +57,6 @@ my %WriteMakefileArgs = (
     "Test::NoWarnings" => "1.04",
     "Test::Output" => 0,
     "Test::Taint" => "1.08",
-    "Test::Warn" => 0,
     "Test::Warnings" => 0,
     "URI" => 0,
     "URI::Escape" => 0,
@@ -101,7 +100,6 @@ my %FallbackPrereqs = (
   "Test::NoWarnings" => "1.04",
   "Test::Output" => 0,
   "Test::Taint" => "1.08",
-  "Test::Warn" => 0,
   "Test::Warnings" => 0,
   "Tie::RefHash" => 0,
   "URI" => 0,
